# Real-Time-Solar-Plant-Data-Streaming-with-PyFlink-and-Kafka

./: .gitignore  ReadMe.md  docker-compose.yml  setup.sh
dashboard_data/: grafana.db
flink/: Dockerfile
flink-jobs/: pyproject.toml
flink-jobs/src/flink_jobs/: kafka-reader.py  kafka-table-reader.py
imgs/: Solar Data Arch.drawio
pg-scripts/: schema_init.sql
plant_data_producer/: pyproject.toml
plant_data_producer/plant_data_producer/: __init__.py  data_stream_producer.py  data_stream_weather.py
producer/: README.md  pyproject.toml
producer/producer/: main.py  producer_module.py
