[project]
name = "flink-jobs"
version = "0.1.0"
description = ""
authors = [
    {name = "InnoCentCoder5497 ",email = "innocentcoder5497@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-flink (>=2.0.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "flink_jobs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
